# pdfwordsearch

./: .gitignore  README.md  install.txt  main.py  main.spec  pyproject.toml  setup.py
backEnd/: main.py
control/: archtec.txt  timeC4-6  timeControl.txt
resource/nltk_data/corpora/: importWordnet.py
src/backend/: main.py
src/pdfViewer/: main.py  tuples.txt
src/pdfViewer/pdf_components/: result.py  results.py  searchbar.py  sidebar.py  vertical_scrollable_frame.py
src/pdf_viewer/: main.py
src/pdf_viewer/pdf_components/: result.py  results.py  searchbar.py  vertical_scrollable_frame.py
src/pdf_viewer/utilities/: summary.py
src/pdfwordsearch/: execute_query.py  main.py  matchPostList.py  pdfCovert.py  pdfScan.py  pdfScanning.ipynb  pdfwordsearch.py  wordMatch.py  word_match.py
src/pdfwordsearch/coordinators/: gui_coordinator.py  io_coordinator.py
src/pdfwordsearch/data_structures/: abstract_postings_list.py  compressed_postings_list.py  posting_listv2.py  postings_list.py  vint.py
src/pdfwordsearch/match/: __init__.py  matchPostList.py  match_posting_list.py  wordMatch.py  word_match.py
src/pdfwordsearch/match_score_rank/: execute_query.py  word_match.py
src/pdfwordsearch/output/: abstract_output.py  console_output.py
src/pdfwordsearch/query/: query.py  term.py  tokenizer.py
src/pdfwordsearch/scan/: __init__.py  pdfCovert.py  pdfScan.py  pdfToapl.py  pdf_scan.py  pdf_to_apl.py  pdf_to_pl.py
src/python_gui/: main.py  pdf_viewer.py  side_pdf_smart_search.py
tests/: test_files.py
tests/backend_tests/: test_backend.py
tests/benchmark_tests/: test_compressed_vs_uncompressed_postings_list.py
tests/integration_tests/: test_pdf_to_info_query.py
tests/unit_tests/: test_compressed_postings_list.py  test_execute_query.py  test_match.py  test_pdf_scan.py  test_pdf_to_words.py  test_postings_list.py  test_postings_list_get_locations.py  test_synonyms.py  test_vint.py
(+5 files in other folders)
