[project]
name = "pdfwordsearch"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Lai-Cheong",email = "blaicheo@uwaterloo.ca"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "ttkbootstrap (>=1.13.11,<2.0.0)",
    "pyinstaller (>=6.14.2,<7.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[tool.poetry]
packages = [{include = "pdfwordsearch", from = "src"}
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
matplotlib = "^3.10.3"
pympler = "^1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
coverage = "^7.8.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.include]]
path = "pdfwordsearch/py.typed"